# napi-experiment

./: .gitattributes  Cargo.toml  README.md  browser.js  index.d.ts  index.js  napi-experiment.wasi-browser.js  napi-experiment.wasi.cjs  package.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
src/: lib.rs
