
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "napi_experiment"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
core-crypto = { git = "https://github.com/wireapp/core-crypto.git", rev = "e7473ecc7e2132cae7b723cfd873bf403eb9300b" }
napi = "3.0.0"
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
